--- a/src/app/components/home.component.html
+++ b/src/app/components/home.component.html
@@ -39,7 +39,7 @@
   <div class="row">
     <div class="col">
       <div class="card">
-        <div class="card-body  text-center">
+        <div class="card-body">
           <app-event-detail [event]="selectedEvent" [createHandler]="addEvent" [updateHandler]="updateEvent" [deleteHandler]="deleteEvent">
           </app-event-detail>
         </div>
