--- a/src/app/components/fertilization.component.html
+++ b/src/app/components/fertilization.component.html
@@ -1,88 +1,60 @@
-<div class="container">
-  <div *ngIf="!selectedEvent" class="row">
-    <div class="col-lg-12">
-      <div class="card">
-        <div class="card-header">
-          <div class="row">
-            <div class="col-sm-5">
-              <i class="fa fa-align-justify"></i> Fertilizzazioni
-              </div>
-              <div class="col-sm-7 d-none d-md-block">
-              <button class="btn btn-warning float-right" (click)="createNewEvent()">New</button>
-            </div>
-          </div>
-        </div>
-        <div class="card-body">
-          <ngx-datatable class="material expandable ngx-datatable fixed-header fixed-row scroll-vertical selectable single-selection"
-            [rows]="events"
-            [columnMode]="'force'"
-            [headerHeight]="50"
-            [footerHeight]="0"
-            [rowHeight]="'auto'"
-            [selected]="selected"
-            [selectionType]="'single'"
-            (activate)="onActivate($event)"
-            (select)='onSelect($event)'>
-            <ngx-datatable-column name="Data Misura">
-              <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-                {{row.dataMisura}}
-              </ng-template>
-            </ngx-datatable-column>
-            <ngx-datatable-column name="K2So4">
-              <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-                {{row.ferti.k2so4}}
-              </ng-template>
-            </ngx-datatable-column>
-            <ngx-datatable-column name="K2No3">
-              <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-                {{row.ferti.k2no3}}
-              </ng-template>
-            </ngx-datatable-column>
-            <ngx-datatable-column name="Magnesio">
-              <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-                {{row.ferti.magnesio}}
-              </ng-template>
-            </ngx-datatable-column>
-            <ngx-datatable-column name="Generico">
-              <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-                {{row.ferti.generico}}
-              </ng-template>
-            </ngx-datatable-column>
-            <ngx-datatable-column name="Ferro">
-              <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-                {{row.ferti.ferro}}
-              </ng-template>
-            </ngx-datatable-column>
-            <ngx-datatable-column name="Fosfati">
-              <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-                {{row.ferti.fosfati}}
-              </ng-template>
-            </ngx-datatable-column>
-            <ngx-datatable-column name="Annotazioni">
-              <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-                {{row.note}}
-              </ng-template>
-            </ngx-datatable-column>
-          </ngx-datatable>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div *ngIf="selectedEvent" class="row">
-    <div class="col-lg-12">
-      <div class="card">
-        <div class="card-body">
-          <app-event-detail
-          [event]="selectedEvent"
-          [createHandler]="addEvent"
-          [updateHandler]="updateEvent"
-          [deleteHandler]="deleteEvent">
-        </app-event-detail>
-      </div>
+<div class="container my-4" *ngIf="!selectedEvent">
+  <button class="btn btn-danger btn-fab fixed-top-right" title="Add" (click)="createNewEvent()">
+    <i class="fa fa-plus"></i>
+  </button>
+  <div class="card">
+    <div class="card-body">
+      <h3 class="card-title">Fertilizzazione</h3>
+      <div class="card-text">
+        <ngx-datatable class="material expandable ngx-datatable fixed-header fixed-row scroll-vertical selectable single-selection"
+          [rows]="events" [columnMode]="'force'" [headerHeight]="50" [footerHeight]="0" [rowHeight]="'auto'" [selected]="selected"
+          [selectionType]="'single'" (activate)="onActivate($event)" (select)='onSelect($event)'>
+          <ngx-datatable-column name="Data Misura">
+            <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+              {{row.dataMisura}}
+            </ng-template>
+          </ngx-datatable-column>
+          <ngx-datatable-column name="K2So4">
+            <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+              {{row.ferti.k2so4}}
+            </ng-template>
+          </ngx-datatable-column>
+          <ngx-datatable-column name="K2No3">
+            <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+              {{row.ferti.k2no3}}
+            </ng-template>
+          </ngx-datatable-column>
+          <ngx-datatable-column name="Magnesio">
+            <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+              {{row.ferti.magnesio}}
+            </ng-template>
+          </ngx-datatable-column>
+          <ngx-datatable-column name="Generico">
+            <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+              {{row.ferti.generico}}
+            </ng-template>
+          </ngx-datatable-column>
+          <ngx-datatable-column name="Ferro">
+            <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+              {{row.ferti.ferro}}
+            </ng-template>
+          </ngx-datatable-column>
+          <ngx-datatable-column name="Fosfati">
+            <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+              {{row.ferti.fosfati}}
+            </ng-template>
+          </ngx-datatable-column>
+          <ngx-datatable-column name="Annotazioni">
+            <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+              {{row.note}}
+            </ng-template>
+          </ngx-datatable-column>
+        </ngx-datatable>
       </div>
     </div>
   </div>
 </div>
-
-
-
+<div class="container my-4" *ngIf="selectedEvent">
+  <app-event-detail [event]="selectedEvent" [createHandler]="addEvent" [updateHandler]="updateEvent" [deleteHandler]="deleteEvent">
+  </app-event-detail>
+</div>
