--- a/src/app/components/home.component.html
+++ b/src/app/components/home.component.html
@@ -1,35 +1,37 @@
-<button *ngIf="!selectedEvent" class="btn btn-danger btn-fab fixed-bottom-right" title="Add" (click)="createNewEvent()">
-  <i class="fa fa-plus"></i>
-</button>
-<div class="jumbotron py-3" *ngIf="!selectedEvent">
-  <img src="assets/img/aqua01.jpg" class="img-home">
-</div>
-<div class="container mb-5" *ngIf="!selectedEvent">
-  <div class="row">
-    <div class="col">
-      <div class="card h-100">
-        <div class="card-body text-center">
-          <h4 class="card-title">Test dell'acqua</h4>
-          <p class="card-text">Ultimo test dell'acqua risale al {{dataTest | date }}</p>
-          <a class="card-link" routerLinkActive="active" [routerLink]="['/test']">Vai alla pagina</a>
+<div class="container-fluid" *ngIf="!selectedEvent">
+  <button class="btn btn-danger btn-fab fixed-top-right" title="Add" (click)="createNewEvent()">
+    <i class="fa fa-plus"></i>
+  </button>
+  <div class="jumbotron py-3">
+    <img src="assets/img/aqua01.jpg" class="img-home">
+  </div>
+  <div class="container mb-5">
+    <div class="row">
+      <div class="col">
+        <div class="card h-100">
+          <div class="card-body text-center">
+            <h4 class="card-title">Test dell'acqua</h4>
+            <p class="card-text">Ultimo test dell'acqua risale al {{dataTest | date }}</p>
+            <a class="card-link" routerLinkActive="active" [routerLink]="['/test']">Vai alla pagina</a>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col">
-      <div class="card h-100">
-        <div class="card-body text-center">
-          <h4 class="card-title">Fertilizzazione</h4>
-          <p class="card-text">Ultima fertilizzazione risale al {{dataFerti | date }}</p>
-          <a class="card-link" routerLinkActive="active" [routerLink]="['/ferti']">Vai alla pagina</a>
+      <div class="col">
+        <div class="card h-100">
+          <div class="card-body text-center">
+            <h4 class="card-title">Fertilizzazione</h4>
+            <p class="card-text">Ultima fertilizzazione risale al {{dataFerti | date }}</p>
+            <a class="card-link" routerLinkActive="active" [routerLink]="['/ferti']">Vai alla pagina</a>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col">
-      <div class="card h-100">
-        <div class="card-body text-center">
-          <h4 class="card-title">Manutenzione</h4>
-          <p class="card-text">Ultima manutenzione risale al {{dataManu | date }}</p>
-          <a class="card-link" routerLinkActive="active" [routerLink]="['/manutenzione']">Vai alla pagina</a>
+      <div class="col">
+        <div class="card h-100">
+          <div class="card-body text-center">
+            <h4 class="card-title">Manutenzione</h4>
+            <p class="card-text">Ultima manutenzione risale al {{dataManu | date }}</p>
+            <a class="card-link" routerLinkActive="active" [routerLink]="['/manutenzione']">Vai alla pagina</a>
+          </div>
         </div>
       </div>
     </div>
