--- a/src/app/layout/topbar/topbar.component.html
+++ b/src/app/layout/topbar/topbar.component.html
@@ -5,6 +5,10 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent" >
     <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+            <a class="nav-link" routerLinkActive="active" [routerLink]="['/home']" >
+              <i class="fa fa-home"></i> Home</a>
+          </li>
       <li class="nav-item">
         <a class="nav-link" routerLinkActive="active" [routerLink]="['/test']" >
           <i class="fa fa-eyedropper"></i> Test</a>
