--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -42,7 +42,8 @@ input.ng-invalid.ng-touched, select.ng-invalid.ng-touched {
 
 .footer {
   bottom: 1rem;
-  text-align: right;
+  right: 1rem;
+  position: fixed;
 }
 
 .font-fancy {
@@ -86,6 +87,12 @@ input.ng-invalid.ng-touched, select.ng-invalid.ng-touched {
     position: fixed;
     right: 2rem;
     bottom: 3rem;
+    z-index: 5;
+  }
+  &.fixed-top-right {
+    position: fixed;
+    right: 5rem;
+    top: 8rem;
     z-index: 5;
   }
 }
