--- a/src/app/layout/topbar/topbar.component.html
+++ b/src/app/layout/topbar/topbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <a class="navbar-brand font-fancy" href="#" >AquaMI</a>
+  <a class="navbar-brand font-fancy" href="#" ><img src="../../../assets/img/alga.png" alt="logo" style="width: 7%"> AquaMI</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
     <span class="navbar-toggler-icon"></span>
   </button>
