--- a/src/app/components/home.component.html
+++ b/src/app/components/home.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" *ngIf="!selectedEvent">
+<div class="full-page-container" *ngIf="!selectedEvent">
   <button class="btn btn-danger btn-fab fixed-top-right" title="Add" (click)="createNewEvent()">
     <i class="fa fa-plus"></i>
   </button>
