--- a/src/app/layout/topbar/topbar.component.html
+++ b/src/app/layout/topbar/topbar.component.html
@@ -1,25 +1,23 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <a class="navbar-brand font-fancy" href="#" ><img src="../../../assets/img/alga.png" alt="logo" style="width: 7%"> AquaMI</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+  <a class="navbar-brand font-fancy" href="#">
+    <img src="../../../assets/img/alga.png" alt="logo" style="width: 7%"> AquaMI</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+    aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent" >
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-            <a class="nav-link" routerLinkActive="active" [routerLink]="['/home']" >
-              <i class="fa fa-home"></i> Home</a>
-          </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLinkActive="active" [routerLink]="['/test']" >
-          <i class="fa fa-eyedropper"></i> Test</a>
+      <li class="nav-item active">
+        <a class="nav-link" routerLinkActive="active" [routerLink]="['/home']">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLinkActive="active" [routerLink]="['/ferti']">
-          <i class="fa fa-leaf"></i> Fertilizzazione</a>
+        <a class="nav-link" routerLinkActive="active" [routerLink]="['/test']">Test</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLinkActive="active" [routerLink]="['/manutenzione']">
-          <i class="fa fa-wrench"></i> Manutenzione</a>
+        <a class="nav-link" routerLinkActive="active" [routerLink]="['/ferti']">Fertilizzazione</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLinkActive="active" [routerLink]="['/manutenzione']">Manutenzione</a>
       </li>
     </ul>
   </div>
