--- a/src/app/components/home.component.html
+++ b/src/app/components/home.component.html
@@ -2,7 +2,7 @@
   <button class="btn btn-danger btn-fab fixed-top-right" title="Add" (click)="createNewEvent()">
     <i class="fa fa-plus"></i>
   </button>
-  <div class="jumbotron home py-3">
+  <div class="jumbotron py-3">
     <img src="assets/img/aqua01.jpg" class="img-home">
   </div>
   <div class="container mb-5">
