--- a/src/app/layout/topbar/topbar.component.html
+++ b/src/app/layout/topbar/topbar.component.html
@@ -1,13 +1,13 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <a class="navbar-brand font-fancy" href="#">
-    <img src="../../../assets/img/alga.png" alt="logo" style="width: 7%"> AquaMI</a>
+    <img src="../../../assets/img/couple1.jpg" alt="logo" class="rounded-circle" style="width: 17%"> AquaMI</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" routerLinkActive="active" [routerLink]="['/home']">Home</a>
       </li>
       <li class="nav-item">
