calendario eventi non cliccabile

--- a/src/app/components/maintenance.component.html
+++ b/src/app/components/maintenance.component.html
@@ -29,7 +29,7 @@
           </ngx-datatable-column>
           <ngx-datatable-column name="Pulizia Spugna Filtro">
             <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-              {{row.manutenzione.filtroSpugne}}
+              {{row.manutenzione.filtroSpugna}}
             </ng-template>
           </ngx-datatable-column>
           <ngx-datatable-column name="Pulizia Pompa">
