--- a/src/app/layout/topbar/topbar.component.html
+++ b/src/app/layout/topbar/topbar.component.html
@@ -19,6 +19,11 @@
       <li class="nav-item">
         <a class="nav-link" routerLinkActive="active" [routerLink]="['/manutenzione']">Manutenzione</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLinkActive="active" [routerLink]="['/calendar']">
+          <i class="fa fa-calendar" aria-hidden="true"></i>
+        </a>
+      </li>
     </ul>
   </div>
 </nav>
