--- a/src/app/components/event-detail.component.html
+++ b/src/app/components/event-detail.component.html
@@ -1,8 +1,13 @@
-<div class="container detail-over my-4" *ngIf="event">
-  <div class="card" id="accordion">
-    <div class="card-body">
-      <h3 class="card-title" *ngIf="editMode">Dettaglio</h3>
-      <h3 class="card-title mb-4" *ngIf="!editMode">Nuova registrazione</h3>
+<div class="modal-dialog modal-xl" *ngIf="event">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h4 class="modal-title" *ngIf="editMode">Dettaglio</h4>
+      <h4 class="modal-title" *ngIf="!editMode">Nuova registrazione</h4>
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">×</span>
+      </button>
+    </div>
+    <div class="modal-body">
       <form #f="ngForm">
         <div class="form-group" id="test">
           <h6 *ngIf="editMode">ID: {{event._id}}</h6>
@@ -407,16 +412,12 @@
         </div>
 
       </form>
-      <div class="row">
-        <div class="col-6">
-          <button class="btn btn-primary" (click)="goBack()">Annulla</button>
-        </div>
-        <div class="col-6">
-          <button class="btn btn-primary pull-right mx-2" *ngIf="!editMode" (click)="createEvent()" [disabled]="!f.valid">Crea</button>
-          <button class="btn btn-danger pull-right mx-2" *ngIf="editMode" (click)="deleteEvent()">Elimina</button>
-          <button class="btn btn-primary pull-right mx-2" *ngIf="editMode" (click)="updateEvent()" [disabled]="!f.valid">Aggiorna</button>
-        </div>
-      </div>
+    </div>
+    <div class="modal-footer">
+      <button class="btn btn-secondary pull-left mx-2" data-dismiss="modal">Annulla</button>
+      <button class="btn btn-primary pull-right mx-2" *ngIf="!editMode" (click)="createEvent()" [disabled]="!f.valid" data-dismiss="modal">Crea</button>
+      <button class="btn btn-danger pull-right mx-2" *ngIf="editMode" (click)="deleteEvent()" data-dismiss="modal">Elimina</button>
+      <button class="btn btn-primary pull-right mx-2" *ngIf="editMode" (click)="updateEvent()" [disabled]="!f.valid" data-dismiss="modal">Aggiorna</button>
     </div>
   </div>
 </div>
