--- a/src/app/components/home.component.html
+++ b/src/app/components/home.component.html
@@ -1,8 +1,13 @@
-<app-event-detail></app-event-detail>
 <div class="full-page-container">
-  <button class="btn btn-danger btn-fab fixed-top-right" title="Add" (click)="createNewEvent()" *ngIf="showAddButton">
+
+  <button class="btn btn-danger btn-fab fixed-top-right" title="Add" (click)="createNewEvent()" data-toggle="modal" data-target="#detail-modal">
     <i class="fa fa-plus"></i>
   </button>
+
+  <div class="modal fade" id="detail-modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    <app-event-detail></app-event-detail>
+  </div>
+
   <div class="jumbotron py-3">
     <img src="assets/img/aqua01.jpg" class="img-home">
   </div>
@@ -37,7 +42,7 @@
       </div>
     </div>
   </div>
-  <div class="container" *ngIf="calendarData" >
+  <div class="container" *ngIf="calendarData">
     <div class="row justify-content-center my-5">
       <div class="col-10">
         <div class="card ">
