--- a/src/app/components/maintenance.component.html
+++ b/src/app/components/maintenance.component.html
@@ -1,15 +1,17 @@
-<app-event-detail></app-event-detail>
 <div class="container my-4">
+  <div class="modal" id="detail-modal" tabindex="-1" role="document" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    <app-event-detail></app-event-detail>
+  </div>
   <div class="card">
     <div class="card-body">
       <h3 class="card-title">Interventi di manutenzione</h3>
       <div class="card-text">
         <ngx-datatable class="material expandable ngx-datatable fixed-header fixed-row scroll-vertical selectable single-selection"
-          [rows]="events" [columnMode]="'force'" [headerHeight]="50" [footerHeight]="0" [rowHeight]="'auto'" 
-          [selectionType]="'single'" (select)='onSelect($event)'>
+          [rows]="events" [columnMode]="'force'" [headerHeight]="50" [footerHeight]="0" [rowHeight]="'auto'" [selectionType]="'single'"
+          (select)='onSelect($event)'>
           <ngx-datatable-column name="Data Misura">
             <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-                {{row.dataMisura | date:'dd/MM/yyyy'}}
+              {{row.dataMisura | date:'dd/MM/yyyy'}}
             </ng-template>
           </ngx-datatable-column>
           <ngx-datatable-column name="Cambio acqua">
