--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -4,6 +4,7 @@ $body-bg: #ededed;
 $theme-colors: ('primary': #00cbd9); // Bootstrap Sass Imports
 @import '../../node_modules/bootstrap/scss/bootstrap';
 $jumbo-bg: white;
+$primary: #00cbd9;
 
 body {
   font-family: Quicksand, Roboto, cursive;
@@ -12,37 +13,6 @@ body {
 .jumbotron {
   background-color: $body-bg;
   border-top: 0.5rem solid $body-bg;
-}
-
-.detail-over {
-  z-index: 4;
-  position: absolute;
-  margin-left: auto;
-  margin-right: auto;
-  left: 0;
-  right: 0;
-}
-
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100%;
-  background: #000;
-  opacity: 0.5;
-  z-index: 1;
-}
-
-.modal {
-  z-index: 2;
-}
-
-.wrapper {
-  -webkit-filter: blur(2px); /* Chrome, Safari, Opera */
-  filter: blur(2px);
 }
 
 input.ng-invalid.ng-touched,
@@ -101,5 +71,42 @@ select.ng-invalid.ng-touched {
   }
 }
 
+/* Modal fixed width */
+@media (min-width: 768px) {
+  .modal-xl {
+    width: 90%;
+   max-width:1200px;
+  }
+}
+
+.ngx-datatable.material.single-selection .datatable-body-row.active,
+.ngx-datatable.material.single-selection
+  .datatable-body-row.active
+  .datatable-row-group,
+.ngx-datatable.material.multi-selection .datatable-body-row.active,
+.ngx-datatable.material.multi-selection
+  .datatable-body-row.active
+  .datatable-row-group,
+.ngx-datatable.material.multi-click-selection .datatable-body-row.active,
+.ngx-datatable.material.multi-click-selection
+  .datatable-body-row.active
+  .datatable-row-group {
+  background-color: $primary !important;
+}
+.ngx-datatable.material.single-selection .datatable-body-row.active:hover,
+.ngx-datatable.material.single-selection
+  .datatable-body-row.active:hover
+  .datatable-row-group,
+.ngx-datatable.material.multi-selection .datatable-body-row.active:hover,
+.ngx-datatable.material.multi-selection
+  .datatable-body-row.active:hover
+  .datatable-row-group,
+.ngx-datatable.material.multi-click-selection .datatable-body-row.active:hover,
+.ngx-datatable.material.multi-click-selection
+  .datatable-body-row.active:hover
+  .datatable-row-group {
+  background-color: !important;
+}
+
 /* Calendar */
-@import "calendar";
+@import 'calendar';
